--- a/sample_java/pom.xml
+++ b/sample_java/pom.xml
@@ -5,6 +5,20 @@
   <artifactId>addition</artifactId>
   <version>1.0</version>
   <name>calculator_addition</name>
+   <build>
+        <plugins>
+	 <plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-site-plugin</artifactId>
+  <version>3.7.1</version>
+</plugin>
+<plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-project-info-reports-plugin</artifactId>
+  <version>3.0.0</version>
+</plugin>
+        </plugins>
+    </build>
   <dependencies>
     <dependency>
       <groupId>javax.servlet</groupId>
