--- a/sample_java/pom.xml
+++ b/sample_java/pom.xml
@@ -6,17 +6,31 @@
   <version>1.0</version>
   <name>calculator_addition</name>
    <build>
-        <plugins>
+       <plugins>
 	 <plugin>
-  <groupId>org.apache.maven.plugins</groupId>
-  <artifactId>maven-site-plugin</artifactId>
-  <version>3.7.1</version>
-</plugin>
-<plugin>
-  <groupId>org.apache.maven.plugins</groupId>
-  <artifactId>maven-project-info-reports-plugin</artifactId>
-  <version>3.0.0</version>
-</plugin>
+  		<groupId>org.apache.maven.plugins</groupId>
+  		<artifactId>maven-site-plugin</artifactId>
+  		<version>3.7.1</version>
+	</plugin>
+	<plugin>
+  		<groupId>org.apache.maven.plugins</groupId>
+  		<artifactId>maven-project-info-reports-plugin</artifactId>
+  		<version>3.0.0</version>
+	</plugin>
+	<plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>tidy-maven-plugin</artifactId>
+          <version>1.1.0</version>
+          <executions>
+            <execution>
+              <id>validate</id>
+              <phase>validate</phase>
+              <goals>
+                <goal>check</goal>
+               </goals>
+            </execution>
+          </executions>
+      </plugin>
         </plugins>
     </build>
   <dependencies>
